kubernetes/k8s/deployment-product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-server
  template:
    metadata:
      labels:
        app: product-server
    spec:
      containers:
      - name: product-server
        image: product-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
