kubernetes/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernete-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-server
  template:
    metadata:
      labels:
        app: main-server
    spec:
      containers:
      - name: main-server
        image: kubernete-server
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
          requests:
            memory: 64Mi
            cpu: 250m
