kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernete-server-ingress
  labels:
    app.kubernetes.io/name: kubernete-server-ingress
spec:
  ingressClassName: nginx
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main-server-service
            port: 
              number: 80
  -  http:
      paths:
      - pathType: Prefix
        path: "/product"
        backend:
          service:
            name: product-server-service
            port: 
              number: 80
